--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+    color: indianred;
     margin: 0; /* Ingen ydre margen fra overskrifter */
     padding: 0; /* Ingen indre margen fra overskrifter */
 }
@@ -21,6 +22,7 @@ ul, ol {
 
 li {
     margin: 0; /* Ingen ydre margen fra listpunkter */
+    color: indianred;
 }
 
 p {
@@ -35,25 +37,18 @@ img {
     height: auto; /* Højden skal tilpasse sig */
 }
 
-
-
-
+a{
+    text-decoration: inherit;
+}
 
 body {
     margin: 0;
     box-sizing: border-box;
     background: #ffc600;
     font-family: 'helvetica neue', serif;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 200;
-}
 
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-
-h1 {
-    margin-top: 0;
 }
 
 .site-wrap {
@@ -61,33 +56,22 @@ h1 {
     margin: 100px auto;
     background: white;
     padding: 40px;
-    text-align: justify;
+    text-align: left;
 }
 
-.align-left {
-    float: left;
-    margin-right: 20px;
+.btn {
+    font-family: "proxima nova", serif;
+    font-weight: 100;
+    font-size: 20px;
+    text-align: center;
+    color: black;
+    border: solid 2px indianred;
+    border-radius: 20px;
+    padding: 2px 10px;
+
 }
 
-.align-right {
-    float: right;
-    margin-left: 20px;
-}
-
-.slide-in {
-    opacity: 0;
-    transition: all .5s;
-}
-
-.align-left.slide-in {
-    transform: translateX(-30%) scale(0.95);
-}
-
-.align-right.slide-in {
-    transform: translateX(30%) scale(0.95);
-}
-
-.slide-in.active {
-    opacity: 1;
-    transform: translateX(0%) scale(1);
+.btn:hover {
+    background-color: indianred;
+    color: white;
 }
